--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Logo</title>
+
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <div class="nav-menu">
+                <ul class="menu-item">
+                    <li class="logo"><a href="#">
+                        <img src="img/logo.png" alt="nav-log"></a>
+                    </li>
+
+                    <li class="items">
+                        <li><a href="#"> Planning</a>
+                        </li>
+                        <li><a href="#"> Testimonials</a>
+                        </li>
+                        <li><a href="#"> Features</a>
+                        </li>
+                        <li><a href="#"> About Us</a>
+                        </li>
+                        <li class="btn"><a href="#"> Get started</a></li>
+                    </li>
+
+                    <li class="hamburger-bar">
+                        <a href="#"><i class="fa-solid fa-bars"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
