Add Nav-bar responsive- tablet and mobile size

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <header>
         <nav class="nav-bar">
             <div class="nav-menu">
-                <ul class="menu-item">
+                <ul>
                     <li class="logo"><a href="#">
                         <img src="img/logo.png" alt="nav-log"></a>
                     </li>
-
-                    <li class="items">
+                </ul>
+                
+                <ul class="items">
+                    <li>
                         <li><a href="#"> Planning</a>
                         </li>
                         <li><a href="#"> Testimonials</a>
@@ -27,15 +29,40 @@
                         </li>
                         <li><a href="#"> About Us</a>
                         </li>
-                        <li class="btn"><a href="#"> Get started</a></li>
-                    </li>
-
-                    <li class="hamburger-bar">
-                        <a href="#"><i class="fa-solid fa-bars"></i></a>
+                        <li class="btn">
+                            <a href="#"> Get started</a>
+                        </li>
+                        <li class="hamburger-bar">
+                            <a href="#"><i class="fa-solid fa-bars"></i></a>
+                        </li>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
+
+    <main>
+        <section>
+            <div class="container grid">
+                <div class="cells">
+                    <div class="cell cell-hero">
+                        <div class="content"></div>
+                    </div>
+                    <div class="cell">
+                        <div class="content"></div>
+                    </div>
+                    <div class="cell">
+                        <div class="content"></div>
+                    </div>
+                    <div class="cell">
+                        <div class="content"></div>
+                    </div>
+                    <div class="cell">
+                        <div class="content"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
