Add first section

--- a/index.html
+++ b/index.html
@@ -43,22 +43,62 @@
 
     <main>
         <section>
-            <div class="container grid">
-                <div class="cells">
-                    <div class="cell cell-hero">
-                        <div class="content"></div>
+            <div class="container">
+                <div class="card-box">
+                    <div class="card-double">
+                        <div class="content">
+                            <h4> Get a demo application</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas accusantium vitae rem nesciunt et minima, magnam animi quam pariatur qui esse odit, at numquam.
+                            </p>
+                            <div class="btn-blue"><a href="#"> 
+                                <i class="fa-brands fa-apple btn-apple"></i> App Store</a>
+                            </div>
+                        </div>
+                        <div class="img-phone">
+                            <img src="img/phone.png" alt="phone">
+                        </div>
                     </div>
-                    <div class="cell">
-                        <div class="content"></div>
+
+                    <div class="card">
+                        <div class="icon">
+                            <i class="fa-solid fa-file-code"></i>
+                        </div>
+                        <div class="content">
+                            <h4>Clean Code</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis deserunt voluptas tenetur incidunt harum veritatis natus. Quod aliquid laboriosam dicta odio. Iure repudiandae dolor laboriosam, alias veritatis deserunt esse odit?
+                            </p>
+                        </div>
                     </div>
-                    <div class="cell">
-                        <div class="content"></div>
+
+                    <div class="card">
+                        <div class="icon">
+                            <i class="fa-solid fa-compass-drafting"></i>
+                        </div>
+                        <div class="content">
+                            <h4>Web Design</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, illo hic cupiditate alias natus facere quasi tempore cumque nobis debitis vero fugit minima non consequuntur, doloribus doloremque minus et itaque!</p>
+                        </div>
                     </div>
-                    <div class="cell">
-                        <div class="content"></div>
+
+                    <div class="card">
+                        <div class="icon">
+                            <i class="fa-solid fa-laptop-code"></i>
+                        </div>
+                        <div class="content">
+                            <h4>Web Development</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem fugit cupiditate repellat rerum optio nobis? Magnam officia excepturi numquam, quibusdam deleniti facilis! Quos laudantium hic soluta cupiditate modi consequatur pariatur.</p>
+                        </div>
                     </div>
-                    <div class="cell">
-                        <div class="content"></div>
+
+                    <div class="card">
+                        <div class="icon">
+                            <i class="fa-solid fa-bullhorn"></i>
+                        </div>
+                        <div class="content">
+                            <h4>Branding</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium necessitatibus earum qui beatae illum nisi, quos quo dicta? Eveniet id necessitatibus accusantium quia dolore quisquam vero dolorem maxime explicabo esse!</p>
+                        </div>
                     </div>
                 </div>
             </div>
