--- a/index.html
+++ b/index.html
@@ -103,6 +103,35 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="bg-color">
+                <div class="container">
+                    <div class="box-both">
+                        <div class="left">
+                            <div>
+                                <img src="img/planning1.png" alt="">
+                            </div>
+                            <h4> Strategic Planning</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos necessitatibus totam doloremque amet temporibus ratione quaerat et suscipit debitis.</p>
+                        </div>
+
+                        <div class="right">
+                            <div>
+                                <img src="img/planning2.png" alt="">
+                            </div>
+                            <h4> App development</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus incidunt, possimus quibusdam, architecto aut odio saepe mollitia.</p>
+                            <div class="btn-arrow">
+                                <a href="#">
+                                    <i class="fa-solid fa-arrow-down"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
