--- a/index.html
+++ b/index.html
@@ -132,6 +132,67 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="container">
+                <div class="contents">
+                    <div> TESTIMONIALS</div>
+                    <h2> 
+                        We are committed expert parteners         
+                    </h2>
+                    <p>
+                        We place huge value on strong relationships and have seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right. 
+                    </p>
+                </div>
+
+                <div class="card-photo">
+                    <div class="photo">
+                        <img src="img/testimonial1.jpg" alt="">
+                    </div>
+
+                    <div class="text">
+                        <p>
+                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ad recusandae quam eos repudiandae voluptatibus praesentium ratione consequuntur quidem."
+                        </p>
+                        <div> NAT REYNOLDS</div>
+                    </div>
+                </div>    
+
+                <div class="card-photo">
+                    <div class="photo">
+                        <img src="img/testimonial2.jpg" alt="">
+                    </div>
+
+                    <div class="text">
+                        <p>
+                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ad recusandae quam eos repudiandae voluptatibus praesentium ratione consequuntur quidem."
+                        </p>
+                        <div> CELIA ALMEDA</div>
+                    </div>
+                </div>    
+
+                <div class="card-photo">
+                    <div class="photo">
+                        <img src="img/testimonial3.jpg" alt="">
+                    </div>
+
+                    <div class="text">
+                        <p>
+                            "Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ad recusandae quam eos repudiandae voluptatibus praesentium ratione consequuntur quidem."
+                        </p>
+                        <div> BOB ROBERTS</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="bg-color">
+                <div class="container">
+                    <h2> Benefits of working with us</h2>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
