Add section benefits

--- a/index.html
+++ b/index.html
@@ -189,7 +189,74 @@
         <section>
             <div class="bg-color">
                 <div class="container">
-                    <h2> Benefits of working with us</h2>
+                    <div class="benefits">
+                        <h2> Benefits of working with us</h2>
+                        <div class="cards">
+                            <div class="number"> 01</div>
+                            <div class="features"> High Quality</div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, eaque laborum culpa nihil praesentium eveniet vitae vel corporis quos, non facilis. 
+                            </p>
+                            <div class="btn-violet">
+                                <a href="#">more</a>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="number"> 02</div>
+                            <div class="features"> Creative Team</div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, eaque laborum culpa nihil praesentium eveniet vitae vel corporis quos, non facilis. 
+                            </p>
+                            <div class="btn-violet">
+                                <a href="#">more</a>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="number"> 03</div>
+                            <div class="features"> Amazing Results</div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, eaque laborum culpa nihil praesentium eveniet vitae vel corporis quos, non facilis. 
+                            </p>
+                            <div class="btn-violet">
+                                <a href="#">more</a>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="number"> 04</div>
+                            <div class="features"> Best Pricing</div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, eaque laborum culpa nihil praesentium eveniet vitae vel corporis quos, non facilis. 
+                            </p>
+                            <div class="btn-violet">
+                                <a href="#">more</a>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="number"> 05</div>
+                            <div class="features"> Innovations</div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, eaque laborum culpa nihil praesentium eveniet vitae vel corporis quos, non facilis. 
+                            </p>
+                            <div class="btn-violet">
+                                <a href="#">more</a>
+                            </div>
+                        </div>
+
+                        <div class="cards">
+                            <div class="number"> 06</div>
+                            <div class="features"> 24/7 Support</div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, eaque laborum culpa nihil praesentium eveniet vitae vel corporis quos, non facilis. 
+                            </p>
+                            <div class="btn-violet">
+                                <a href="#">more</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
