Add section-about us

--- a/index.html
+++ b/index.html
@@ -260,6 +260,33 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="container">
+                <div class="aboutus">
+                    <div class="about">
+                        <h1> About Us</h1>
+                        <p class="p-big">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aperiam fuga sequi corrupti, quia quasi quod nulla earum commodi ex labore asperiores tempora repellat quos sapiente sunt doloremque reprehenderit id culpa!Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad dignissimos ducimus vel qui perferendis veniam Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit enim facilis illo adipisci similique quos unde assumenda aliquid obcaecati consequatur aliquam, magni blanditiis commodi ratione? A ea ipsa culpa minus!
+                        </p>
+
+                        <p class="p-small">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad dignissimos ducimus vel qui perferendis veniam nemo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nam quasi ut eligendi iure ratione. Distinctio saepe excepturi, unde repellendus, deserunt, dolor doloribus possimus fugit reiciendis ducimus voluptatem alias enim.
+                        </p>
+                    </div>
+
+                    <div class="photo-aboutus">
+                        <img src="img/about.jpg" alt="">
+                        <p> 
+                            I help companies Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                        </p>
+                        <div class="btn-linkedin">
+                            <a href="#"><i class="fa-brands fa-linkedin"></i> Find me on LinkedIn</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
