--- a/index.html
+++ b/index.html
@@ -287,6 +287,44 @@
                 </div>
             </div>
         </section>
+
+        <footer>
+            <section>
+                <div class="bg-color">
+                    <div class="container-small">
+                        <div class="contacts">
+                            <div class="font-small"> GET STARTED</div>
+                            <h2> Simple, Trasparent Pricing
+                            </h2>
+                            <h1> It's Free!</h1>
+                            <p class="small"> We are still in beta and we will be for awhile. As we add more functionality, we will look into others plans with more controls.</p>
+                            <div class="btn-getstarted"> 
+                                <a href="#"> Get Started</a>
+                            </div>
+                            <div class="font-small"> 
+                                Copyright 2021 Boolean • Classe XX • <a href="#"> Privacy Policy</a>
+                            </div>
+                        </div>    
+                    </div>
+                </div>
+            </section>
+
+            <section>
+                <div class="bg-colorblack">
+                    <div class="container-small">
+                        <div class="links">
+                            <p class="footer-links">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor provident quisquam iure nesciunt, sint repellat, dolore consequuntur labore expedita incidunt voluptatem!
+                            </p>
+
+                            <p> 
+                                <a href="#">Lorem ipsum</a> dolor sit amet consecteturquisquam. <a href="#"> Boolean careers</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </footer>
     </main>
 </body>
 </html>
