--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Logo</title>
 
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/media.css">
 </head>
 <body>
     <header>
